--- a/changelog
+++ b/changelog
@@ -1,2 +1,4 @@
 [2025-03-07] v1.0.1
   - dodano nowy moduł "Ostrzegaj przed ponownym wygenerowaniem etykiety"
+[2025-03-10] v1.0.2
+  - dodano nowy moduł "Szybkie wysyłanie nowej wiadomości do kupującego"
