--- a/changelog
+++ b/changelog
@@ -2,3 +2,5 @@
   - dodano nowy moduł "Ostrzegaj przed ponownym wygenerowaniem etykiety"
 [2025-03-10] v1.0.2
   - dodano nowy moduł "Szybkie wysyłanie nowej wiadomości do kupującego"
+[2025-03-13] v1.0.3
+  - dodano przycisk wysyłania nowej wiadomości z modułu "Szybkie wysyłanie nowej wiadomości do kupującego" w dodatkowym miejscu - na stronie "zwroty"
