--- a/changelog
+++ b/changelog
@@ -18,3 +18,6 @@
  - Do modułu "Ostrzegaj przed ponownym wygenerowaniem etykiety" dodano nową funkcjonalność - sprawdzanie czy zamówienie nie zostało anulowane
 [2025-04-26] v1.0.8
 - Dodano nowy moduł "Pokazuj statystyki kupujących"
+[2025-05-30] v1.0.9
+- Dostosowano do ostatnich zmian moduł "Zmiana tytułu aukcji na liście ofert"
+- Poprawiono błąd uniemożliwiający jednoczesne załadowanie modułów "Pokazuj statystyki kupujących" i "Pokazuj status przesyłek"
