--- a/changelog
+++ b/changelog
@@ -21,3 +21,5 @@
 [2025-05-30] v1.0.9
 - Dostosowano do ostatnich zmian moduł "Zmiana tytułu aukcji na liście ofert"
 - Poprawiono błąd uniemożliwiający jednoczesne załadowanie modułów "Pokazuj statystyki kupujących" i "Pokazuj status przesyłek"
+[2025-06-11] v1.1.0
+- Dostosowano do ostatnich zmian moduł "Szybkie wysyłanie nowej wiadomości do kupującego"
